fix download progress display on mobile

--- a/packages/client/src/modals/download/queue/index.module.scss
+++ b/packages/client/src/modals/download/queue/index.module.scss
@@ -1,8 +1,22 @@
 .item {
   display: grid;
-  grid-template-columns: 2fr 2fr 0.5fr;
+  grid-template-columns: 2fr auto;
   padding: 0.5rem 0;
   grid-gap: 1rem;
+
+  & > div:first-child {
+    grid-column: 1 / 3;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: 960px) {
+    grid-template-columns: 2fr 2fr auto;
+
+    & > div:first-child {
+      grid-column: 1 / 2;
+      justify-content: flex-start;
+    }
+  }
 
   &:not(:last-child) {
     border-bottom: 1px solid var(--color-bg-interactive);
